src/components/SelectedCardList/SelectedCardList.scss
@import '../../components/common/styles/ScrollBar.scss';
.SelectedCardList {
  display: flex;
  flex-direction: row;
  justify-content: center;
  bottom: 24px;
  padding: 8px;
}

.SelectedCardWrapper {
  @include ThemeScrollBar();
  width: 100%;
  overflow-y: auto;
  height: 180px;
}
.SelectedCards {
  display: grid;
  width: fit-content;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 70px;
  width: 100%;
  grid-gap: 4px;
  justify-content: space-evenly;
}

@media (max-width: 1200px) {
  .SelectedCardList {
    padding: 4px;
  }
  .SelectedCards {
    grid-template-columns: repeat(auto-fit, minmax(auto, 70px));
  }
}

